fixed nav row svg icons,sizes,alignment + fixed border colors & sizes + fixed header"s twitter icon color

--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -21,8 +21,8 @@ li {
 	//border: 0.1rem solid green;
 }
 
-.icon-fill{
-  fill:black
+.icon-fill {
+	fill: black;
 }
 
 #App {
@@ -48,16 +48,15 @@ li {
 	}
 	#left-container {
 		z-index: 2;
-    border-top:0.01rem solid black;
 		position: fixed;
-		margin-top:calc(100vh - 53.5px);
+		margin-top: calc(100vh - 53.5px);
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
 		/* margin: 0; */
 		padding: 0;
 		//align-items: end;
-		border-right: solid rgba(220, 220, 220, 0.3);
+		border-top: 0.1rem solid rgb(239, 243, 244);
 		height: 53.5px;
 		width: 100%;
 		//border: solid red;
@@ -65,15 +64,21 @@ li {
 		font-family: "Arimo", sans-serif;
 		font-size: 1.3rem;
 		nav {
-
-
-
 			width: 100%;
+			height: 100%;
+			margin: 0;
+			padding: 0;
 			text-decoration: none;
+			//border:solid yellow;
 			ul {
-        display: flex;
-        justify-content: space-around;
+				display: flex;
+				justify-content: space-evenly;
 				list-style: none;
+				margin: 0;
+				padding: 0;
+				height: 100%;
+				//padding-left:2px;
+				//border: 1px solid green;
 				//list-style-image:url("birdhouse.png");
 				img {
 					width: 1.5rem;
@@ -82,11 +87,31 @@ li {
 				}
 
 				a {
+					display: flex;
+					justify-content: center;
+					align-items: center;
 					text-decoration: none;
 					color: initial;
+					//margin: 0 0 0 2px;
+					padding: 0;
+					width: 100%;
+					height: 100%;
+					//border: 1px solid blue;
 					li {
-						margin-bottom: 0rem;
-						padding: 1rem 1.5rem 1rem 1.5rem;
+						display: flex;
+						justify-content: center;
+						align-items: center;
+						margin: 0;
+						padding: 0;
+						//padding: 1rem 1.5rem 1rem 1.5rem;
+						//border:solid blue;
+						svg {
+							display: inline-block;
+							/* padding:0;
+							margin:0; */
+							//border:solid red;
+							align-self: center;
+						}
 					}
 					li:hover {
 						background-color: rgba(220, 220, 220, 0.6);
@@ -155,7 +180,7 @@ li {
 			width: 100%;
 			background-color: rgba($color: #ffffff, $alpha: 0.8);
 			backdrop-filter: blur(10px);
-			border-bottom: 0.1rem solid grey;
+			border-bottom: 0.1rem solid rgb(239, 243, 244);
 			#header-top {
 				display: flex;
 				justify-content: center;
@@ -174,10 +199,12 @@ li {
 				}
 
 				#twitter-logo {
-					height: 24px;
+					height: 24.39px;
 					padding: 0;
 					margin: 0;
 					flex: 1 1 auto;
+					fill: rgb(29, 155, 240);
+
 				}
 			}
 			#header-bottom {
